--- a/composer.json
+++ b/composer.json
@@ -18,7 +18,7 @@
     "require": {
         "php": ">=5.4.0",
         "topthink/framework": "5.0.*",
-        "overtrue/wechat": "^4.2"
+        "overtrue/wechat": "~3.3"
     },
     "autoload": {
         "psr-4": {
